--- a/ETL_Project_CarlosF/seguridad/grants.ipynb
+++ b/ETL_Project_CarlosF/seguridad/grants.ipynb
@@ -10,73 +10,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d9b3578d-1fd6-4e6b-98df-b3a7fa983d59",
-     "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1767594679568}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- Databricks notebook: seguridad/01_grants_gold\n",
-    "-- Objetivo: aplicar GRANTS mínimos sobre la capa GOLD (consumo) en Unity Catalog\n",
-    "\n",
-    "-- =========================\n",
-    "-- 0) Verificar contexto\n",
-    "-- =========================\n",
-    "SELECT current_catalog() AS catalog, current_schema() AS schema, current_user() AS principal;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "53eaa137-8696-4f2a-98d2-5e091dd02b30",
-     "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1767594688959}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- =========================\n",
-    "-- 1) Definir objeto a proteger (GOLD)\n",
-    "-- =========================\n",
-    "\n",
-    "SHOW TABLES IN catalog_project.gold;\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "7a4dd6b0-0d40-4c50-88d1-1d2a0e1ba555",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -88,6 +21,22 @@
     "SHOW GRANTS ON SCHEMA catalog_project.bronze;\n",
     "SHOW GRANTS ON SCHEMA catalog_project.silver;\n",
     "SHOW GRANTS ON SCHEMA catalog_project.gold;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e7eae4b2-af76-4f5b-bd2d-bcee745c3dfc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Permisos a los schemas y catalogs"
    ]
   },
   {
@@ -108,60 +57,33 @@
    },
    "outputs": [],
    "source": [
+    "GRANT ALL PRIVILEGES ON CATALOG catalog_project TO `data_engineers`;\n",
+    "GRANT USAGE ON CATALOG catalog_project TO `bi_readers`;\n",
+    "GRANT CREATE, USE SCHEMA ON SCHEMA  catalog_project.bronze to `data_engineers`;\n",
+    "GRANT CREATE, USE SCHEMA ON SCHEMA  catalog_project.silver to `data_engineers`;\n",
+    "GRANT CREATE, USE SCHEMA ON SCHEMA  catalog_project.gold to `data_engineers`;\n",
     "\n",
-    "-- 3) Validate practical access\n",
-    "USE CATALOG catalog_project;\n",
-    "USE SCHEMA gold;\n",
-    "SHOW TABLES;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "d10c1645-eb8d-4eaa-b731-dbc447aa7a33",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- Ajusta el usuario si lo deseas (puede ser current_user)\n",
-    "GRANT USAGE ON CATALOG catalog_project TO `carlos_fernandez_1996_outlook.com#ext#@carlosfernandez1996outlook.onmicrosoft.com`;\n",
-    "GRANT USAGE ON SCHEMA catalog_project.gold TO `carlos_fernandez_1996_outlook.com#ext#@carlosfernandez1996outlook.onmicrosoft.com`;\n",
+    "GRANT USAGE ON CATALOG catalog_project TO `bi_readers`;\n",
+    "GRANT USAGE ON SCHEMA catalog_project.gold TO `bi_readers`;\n",
+    "GRANT SELECT ON SCHEMA catalog_project.gold TO `bi_readers`;\n",
     "\n",
-    "GRANT USAGE ON CATALOG catalog_project TO `carlos_fernandez_1996@outlook.com`;\n",
-    "GRANT USAGE ON SCHEMA catalog_project.gold TO `carlos_fernandez_1996@outlook.com`;\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "3d96c54e-5dde-46a0-9eea-435e0e6e436c",
+     "nuid": "b4f87276-fedb-450d-95e3-5cca68020b60",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "GRANT USAGE ON SCHEMA catalog_project.gold TO bi_readers;\n",
-    "\n"
+    "Permisos a los external locations"
    ]
   },
   {
@@ -174,7 +96,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "bc6a31a0-143b-41f0-a8bb-50390423afe5",
+     "nuid": "cdc299cd-a5a4-4676-87ad-3d9b9a8e0658",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -182,8 +104,36 @@
    },
    "outputs": [],
    "source": [
-    "GRANT SELECT ON TABLE catalog_project.gold.hybrid_manufacturing_categorical TO bi_readers;\n",
-    "GRANT SELECT ON TABLE catalog_project.gold.manufacturing_defect_dataset TO bi_readers;\n"
+    "GRANT READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-data` to `data_engineers`;\n",
+    "GRANT READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-bronze` to `data_engineers`;\n",
+    "GRANT READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-silver` to `data_engineers`;\n",
+    "GRANT READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-golden` to `data_engineers`;\n",
+    "GRANT READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-raw` to `data_engineers`;\n",
+    "\n",
+    "\n",
+    "GRANT READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-golden` to `bi_readers`;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1c556389-cf0d-4722-823d-2e328943bcb5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "GRANT SELECT ON TABLE catalog_project.gold.hybrid_manufacturing_categorical TO `bi_readers`;\n",
+    "GRANT SELECT ON TABLE catalog_project.gold.manufacturing_defect_dataset TO `bi_readers`;\n"
    ]
   }
  ],
