Ediciones en revoke y security

--- a/ETL_Project_CarlosF/reversion/revoke.ipynb
+++ b/ETL_Project_CarlosF/reversion/revoke.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8f96f720-c81b-45b1-a7d0-274ffbf3d5a5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Revocar privilegios en catalogo y schema de grupo data_engineers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -20,151 +36,26 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- Verificar contexto y principal activo\n",
-    "SELECT\n",
-    "  current_catalog() AS catalog,\n",
-    "  current_schema()  AS schema,\n",
-    "  current_user()    AS principal;\n"
+    "REVOKE ALL PRIVILEGES ON CATALOG catalog_project from `data_engineers`;\n",
+    "REVOKE CREATE, USE SCHEMA ON SCHEMA catalog_project.bronze from `data_engineers`;\n",
+    "REVOKE CREATE, USE SCHEMA ON SCHEMA catalog_project.silver from `data_engineers`;\n",
+    "REVOKE CREATE, USE SCHEMA ON SCHEMA catalog_project.gold from `data_engineers`;\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "0a0e021f-4c67-4525-a873-0d88cffaf522",
+     "nuid": "3e827b30-b426-4d45-8ab0-ec3d6f520f29",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "%sql\n",
-    "SHOW GRANTS ON TABLE catalog_project.gold.gold_student_performance_agg;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "8679a5d0-0bf0-495a-9b75-3fa18aba0266",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Databricks notebook cell (Python)\n",
-    "\n",
-    "gold_table = \"catalog_project.gold.gold_student_performance_agg\"\n",
-    "\n",
-    "# Detectar el principal actual (Unity Catalog–aware)\n",
-    "principal = spark.sql(\"SELECT current_user() AS u\").collect()[0][\"u\"]\n",
-    "\n",
-    "print(f\"Revirtiendo permisos para el principal: {principal}\")\n",
-    "\n",
-    "# Revoke de todos los privilegios sobre la tabla GOLD\n",
-    "spark.sql(f\"REVOKE ALL PRIVILEGES ON TABLE {gold_table} FROM `{principal}`\")\n",
-    "\n",
-    "print(\"✅ REVOKE ejecutado correctamente.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a9d3de5c-a59b-490e-98bc-471f9ef6b775",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "SHOW GRANTS ON TABLE catalog_project.gold.gold_student_performance_agg;\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "3e944286-66fd-4103-b261-01df5948c19f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# =========================\n",
-    "# Eliminación lógica (controlada)\n",
-    "# =========================\n",
-    "# Cambia a True solo cuando quieras ejecutar la reversión lógica\n",
-    "DO_LOGICAL_DELETE = True\n",
-    "\n",
-    "gold_table = \"catalog_project.gold.gold_student_performance_agg\"\n",
-    "\n",
-    "if DO_LOGICAL_DELETE:\n",
-    "    # Opción A: Vaciar datos (mantiene la tabla)\n",
-    "    spark.sql(f\"TRUNCATE TABLE {gold_table}\")\n",
-    "    print(f\"⚠️ TRUNCATE ejecutado sobre {gold_table}\")\n",
-    "else:\n",
-    "    print(\"ℹ️ DO_LOGICAL_DELETE=False -> No se ejecutó TRUNCATE/DROP (modo seguro).\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c8c9f9a8-2a9f-4301-bbbf-dc5ed65c7e3d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "SELECT COUNT(*) AS total_rows\n",
-    "FROM catalog_project.gold.gold_student_performance_agg;\n"
+    "Revocar privilegios en catalogo y schema de grupo bi_readers"
    ]
   },
   {
@@ -174,7 +65,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "dcfde6e9-ece8-440a-85c1-9604471be6ca",
+     "nuid": "136f459b-be3f-4f91-812d-150a6a12bc33",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -182,23 +73,84 @@
    },
    "outputs": [],
    "source": [
-    "# =========================\n",
-    "# Rutas físicas (ADLS) - Documentación\n",
-    "# =========================\n",
-    "#\n",
-    "# \"Tabla lógica\" = objeto en Unity Catalog (metadatos).\n",
-    "# Acciones como TRUNCATE/DROP/RESTORE operan a nivel lógico.\n",
-    "#\n",
-    "# \"Ruta física\" = ubicación real de los archivos Delta/Parquet en ADLS (abfss://...).\n",
-    "#\n",
-    "# Buenas prácticas:\n",
-    "# - NO borrar rutas físicas manualmente en un proyecto (riesgo de romper _delta_log y time travel).\n",
-    "# - La limpieza física la gestiona Delta Lake (VACUUM) y políticas de retención.\n",
-    "#\n",
-    "# Ejemplo teórico (NO ejecutar):\n",
-    "# dbutils.fs.rm(\"abfss://<container>@<storage>.dfs.core.windows.net/<ruta_delta>\", recurse=True)\n",
-    "\n",
-    "print(\"✅ Documentación de rutas físicas incluida (sin borrado físico).\")\n"
+    "%sql\n",
+    "REVOKE USAGE ON CATALOG catalog_project from `bi_readers`;\n",
+    "REVOKE USAGE ON SCHEMA catalog_project.gold from `bi_readers`;\n",
+    "REVOKE SELECT ON SCHEMA catalog_project.gold from `bi_readers`;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2934b008-607a-4a40-ac64-ef502ed95f7a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Revocar privilegios en external locations de grupo data_engineers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "646c9081-f220-4a87-ac0a-8108ef727186",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "REVOKE READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-data` from `data_engineers`;\n",
+    "REVOKE READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-bronze` from `data_engineers`;\n",
+    "REVOKE READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-silver` from `data_engineers`;\n",
+    "REVOKE READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-golden` from `data_engineers`;\n",
+    "REVOKE READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-raw` from `data_engineers`;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "26796be8-0ec1-4755-ba8b-653d37b0b047",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Revocar privilegios en external locations de grupo bi_readers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3c8ce3d5-1d92-41a8-a18f-57d6f6365aab",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "REVOKE READ FILES, WRITE FILES ON EXTERNAL LOCATION `exlt-golden` from `bi_readers`;\n"
    ]
   }
  ],
